# token-usage-viewer

./: .gitignore  AGENTS.md  README.md  config.example.yaml  pyproject.toml  run-windows.ps1
docs/superpowers/mockups/: windows-widget-style-options.html
docs/superpowers/plans/: 2026-05-25-deepseek-consumption-panel.md  2026-05-25-token-usage-tui.md  2026-05-25-windows-candy-widget.md
docs/superpowers/specs/: 2026-05-25-deepseek-consumption-panel-design.md  2026-05-25-token-usage-tui-design.md  2026-05-25-windows-candy-widget-design.md
src/token_usage/: __main__.py  app.py  config.py  models.py
src/token_usage/adapters/: __init__.py  base.py  deepseek.py  openai.py  opencode.py  zhipu.py
src/token_usage/gui/: __init__.py  styles.py  view_models.py  widget_app.py  worker.py
src/token_usage/widgets/: dashboard.py  platform_card.py  quota_bar.py
tests/: test_adapters.py  test_app.py  test_config.py  test_gui_cli.py  test_gui_view_models.py  test_gui_worker.py  test_models.py
