[project]
name = "token-usage-viewer"
version = "0.1.0"
description = "TUI dashboard for AI platform token usage"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.50",
    "httpx",
    "pyyaml",
]

[project.scripts]
token-usage = "token_usage.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/token_usage"]
