[project]
name = "token-usage-viewer"
version = "0.1.0"
description = "TUI dashboard for AI platform token usage"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.50",
    "httpx[socks]",
    "pyyaml",
]

[project.scripts]
token-usage = "token_usage.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/token_usage"]

[dependency-groups]
dev = [
    "nuitka>=4.1.1",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
]
